实现了从文件系统找到所有dicom文件，提取元信息，整理为ElementTree的方法，并在这之上实现了其数据持久化(.xml)和显示（通过TreeWidget） 遗留问题：提升canvas交互可读性，进一步理顺逻辑；增强annotaion；修正所有交互错误；以开源组件标准封装和说明canvas，TreeWidget总是为莫名失去响应，另外还出现了wrapped c/c++ object of type QTreeWidgetItem has been deleted 下一步工作：设计canvas关联的标记查看窗口；设计肺结节标签模型和编辑/查看器；编写dicom读写组件

--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -137,7 +137,7 @@
    <addaction name="fit_window_width_action"/>
    <addaction name="separator"/>
   </widget>
-  <widget class="QDockWidget" name="annotation_list_dock">
+  <widget class="QDockWidget" name="annotations_list_dock">
    <property name="sizePolicy">
     <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
      <horstretch>0</horstretch>
@@ -653,7 +653,7 @@
    </property>
   </action>
   <zorder>label_edit_dock</zorder>
-  <zorder>annotation_list_dock</zorder>
+  <zorder>annotations_list_dock</zorder>
   <zorder>series_list_dock</zorder>
   <zorder>dataset_tree_dock</zorder>
  </widget>
