--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1016</width>
-    <height>763</height>
+    <width>1920</width>
+    <height>1080</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -28,7 +28,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1016</width>
+     <width>1920</width>
      <height>23</height>
     </rect>
    </property>
@@ -89,6 +89,8 @@
     <addaction name="fit_window_width_action"/>
     <addaction name="separator"/>
     <addaction name="toggle_all_annotatons_visibility_action"/>
+    <addaction name="separator"/>
+    <addaction name="wlww_reset_action"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -143,6 +145,7 @@
    <addaction name="fit_window_action"/>
    <addaction name="fit_window_width_action"/>
    <addaction name="separator"/>
+   <addaction name="wlww_reset_action"/>
   </widget>
   <widget class="QDockWidget" name="annotations_list_dock">
    <property name="sizePolicy">
@@ -188,6 +191,12 @@
      <verstretch>1</verstretch>
     </sizepolicy>
    </property>
+   <property name="minimumSize">
+    <size>
+     <width>400</width>
+     <height>960</height>
+    </size>
+   </property>
    <property name="windowTitle">
     <string>数据库</string>
    </property>
@@ -207,7 +216,7 @@
     <string>当前序列</string>
    </property>
    <attribute name="dockWidgetArea">
-    <number>1</number>
+    <number>2</number>
    </attribute>
    <widget class="QWidget" name="placeholder6">
     <property name="sizePolicy">
@@ -672,6 +681,18 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+N</string>
+   </property>
+  </action>
+  <action name="wlww_reset_action">
+   <property name="icon">
+    <iconset>
+     <normaloff>icons/undo.svg</normaloff>icons/undo.svg</iconset>
+   </property>
+   <property name="text">
+    <string>重置窗位窗宽</string>
+   </property>
+   <property name="toolTip">
+    <string>重置窗位窗宽到文件提供的窗位窗宽</string>
    </property>
   </action>
   <zorder>label_edit_dock</zorder>
