新增内容： 在读取新序列时调整窗位窗宽：现在是可选项了 修正了标签编辑器中的分叶分段选项 为DicomTree添加了增加方法，为database_widget增加了checkstate显示，会在程序启动时根据序列的被标记情况改变
遗留问题：
提升canvas交互可读性，进一步理顺逻辑
增强annotaion；修正所有交互错误
以开源组件标准封装和说明canvas

下一步工作：
将标记文件保存为json 而不是pkl文件
为标签窗口增加正确的征象选项
增强数据库模块的功能和性能到可用水准
增强dcm文件查看功能，首先增加元信息显示

--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -146,6 +146,7 @@
    <addaction name="fit_window_width_action"/>
    <addaction name="separator"/>
    <addaction name="wlww_reset_action"/>
+   <addaction name="toggle_auto_wlww_action"/>
   </widget>
   <widget class="QDockWidget" name="annotations_list_dock">
    <property name="sizePolicy">
@@ -616,7 +617,8 @@
    </property>
    <property name="icon">
     <iconset>
-     <normaloff>icons/unchecked.svg</normaloff>icons/unchecked.svg</iconset>
+     <normaloff>icons/unchecked.svg</normaloff>
+     <normalon>icons/checked.svg</normalon>icons/unchecked.svg</iconset>
    </property>
    <property name="text">
     <string>标记填充</string>
@@ -693,6 +695,22 @@
    </property>
    <property name="toolTip">
     <string>重置窗位窗宽到文件提供的窗位窗宽</string>
+   </property>
+  </action>
+  <action name="toggle_auto_wlww_action">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>icons/unchecked.svg</normaloff>
+     <normalon>icons/checked.svg</normalon>icons/unchecked.svg</iconset>
+   </property>
+   <property name="text">
+    <string>自动窗位窗宽</string>
+   </property>
+   <property name="toolTip">
+    <string>启用/禁用在读取新序列时按照文件调整窗位窗宽</string>
    </property>
   </action>
   <zorder>label_edit_dock</zorder>
