新增内容： 将数据库窗口的逻辑改为同时只处理一个数据库 为这种逻辑提供了相应的新建/打开数据库方法,和默认初始化方法(打开指定目录下第一个数据库) 为数据库中的series增加了被标记状态
遗留问题：
NoneType' object has no attribute 'text
提升canvas交互可读性，进一步理顺逻辑
增强annotaion；修正所有交互错误
以开源组件标准封装和说明canvas

下一步工作：
将标记文件保存为json 而不是pkl文件
为标签窗口增加正确的征象选项
增强数据库模块的功能和性能到可用水准
增强dcm文件查看功能，首先增加元信息显示

--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -109,6 +109,7 @@
      <string>数据库(&amp;B)</string>
     </property>
     <addaction name="new_database_action"/>
+    <addaction name="open_database_action"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menu"/>
@@ -711,6 +712,21 @@
    </property>
    <property name="toolTip">
     <string>启用/禁用在读取新序列时按照文件调整窗位窗宽</string>
+   </property>
+  </action>
+  <action name="open_database_action">
+   <property name="icon">
+    <iconset>
+     <normaloff>icons/open_database.svg</normaloff>icons/open_database.svg</iconset>
+   </property>
+   <property name="text">
+    <string>打开数据库</string>
+   </property>
+   <property name="toolTip">
+    <string>从.xml文件打开数据库</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+O</string>
    </property>
   </action>
   <zorder>label_edit_dock</zorder>
